--- a/src/components/ViewModel/styles.css
+++ b/src/components/ViewModel/styles.css
@@ -10,17 +10,17 @@ button {
 
 .AlertDialogOverlay {
   background-color: var(--black-a9);
-  position: fixed;
+  position: relative;
   inset: 0;
   animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 }
 
 .AlertDialogContent {
-  background-color: white;
+  background-color: black;
   border-radius: 6px;
   box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
-  position: fixed;
-  top: 50%;
+  position: relative;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90vw;
@@ -28,9 +28,14 @@ button {
   max-height: 85vh;
   padding: 25px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  overflow: auto;
 }
 .AlertDialogContent:focus {
   outline: none;
+}
+
+.Button.violet:focus {
+  background-color: #0000FF !important;
 }
 
 .AlertDialogTitle {
@@ -62,44 +67,3 @@ button {
     margin-right:10px;
 }
 
-
-.Button.red {
-  background-color: var(--red-4);
-  color: var(--red-11);
-}
-.Button.red:hover {
-  background-color: var(--red-5);
-}
-.Button.red:focus {
-  box-shadow: 0 0 0 2px var(--red-7);
-}
-.Button.mauve {
-  background-color: var(--mauve-4);
-  color: var(--mauve-11);
-}
-.Button.mauve:hover {
-  background-color: var(--mauve-5);
-}
-.Button.mauve:focus {
-  box-shadow: 0 0 0 2px var(--mauve-7);
-}
-
-@keyframes overlayShow {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes contentShow {
-  from {
-    opacity: 0;
-    transform: translate(-50%, -48%) scale(0.96);
-  }
-  to {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
